# pdf_oxide

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARKS.md  build.rs  composer.json  debug_output.txt  deny.toml  llms.txt  osv-scanner.toml  pyproject.toml  rylai.toml  tmp_issue371_analysis.md
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bench/: rust_bench.rs
benches/: streaming_table_scaling.rs
clojure/: deps.edn
cpp/: CMakeLists.txt
csharp/: Directory.Build.props  README.md
dart/: pubspec.yaml
docs/: CRYPTO_PROVIDERS.md  DEVELOPMENT_GUIDE.md  HTML_TO_PDF_GUIDE.md  OCR_GUIDE.md  RELEASING-bindings.md  document-builder-audit-2026-04-21.md  getting-started-rust.md  getting-started-wasm.md  v0.3.34-layout-fix-plan.md  v0.3.35-html-css-pdf-plan.md  v0.3.35-pre-flight-audit.md
elixir/: mix.exs
examples/: audit_advance.rs  cornercase_runner.rs  create_pdf_with_custom_font.rs  edit_text_content.rs  extract_html_simple.rs  extract_markdown_clean.rs  extract_markdown_simple.rs  extract_pages.rs  extract_text_simple.rs  html_to_pdf.rs  html_to_pdf_arg.rs  ocr_scanned_pdf.rs  render_pages.rs  test_irs_forms.rs  test_irs_md.rs  verify_corpus.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs
go/: .golangci.yml  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  api_coverage_test.go  certificate_test.go  cgo_dev.go  document_builder.go  document_builder_test.go  editor_new_methods_test.go  (+9 more)
(+954 files in other folders)
